# s3lab

./: .gitignore  AGENTS.md  Cargo.toml  README.md  qodana.sarif.json  qodana.yaml  rust-toolchain.toml  sonar-project.properties
.github/workflows/: code_quality.yml  qodana.yml  sonarqube.yml  tests.yml
docs/: milestone2-smoke-tests.md  milestone3-smoke-tests.md  milestone4-smoke-tests.md  milestone5-smoke-tests.md  milestone6-smoke-tests.md  phase1-smoke-tests.md
src/: cli.rs  config.rs  encoding.rs  lib.rs  main.rs  trace.rs
src/s3/: bucket.rs  error.rs  mod.rs  object.rs  operation.rs  sigv4.rs  time.rs  xml.rs
src/server/: mod.rs  routes.rs  state.rs  ui.rs
src/server/ui_assets/: app.css  app.js  index.html
src/storage/: fs.rs  journal.rs  key.rs  mod.rs
tests/: cli_binary.rs  http_routing_contract.rs  http_server_harness.rs  project_structure.rs  s3_error_xml_contract.rs  storage_contract.rs
tests/support/: mod.rs
