[package]
name = "s3lab"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Offline S3 compatibility and protocol debugging lab."

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
md-5 = "0.11"
percent-encoding = "2"
quick-xml = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
tempfile = "3"
tower = "0.5"
